tests/baselines/reference/declarationEmitIndexTypeNotFound.errors.txt
declarationEmitIndexTypeNotFound.ts(2,6): error TS1268: An index signature parameter type must be 'string', 'number', 'symbol', or a template literal type.
declarationEmitIndexTypeNotFound.ts(2,13): error TS2304: Cannot find name 'TypeNotFound'.


==== declarationEmitIndexTypeNotFound.ts (2 errors) ====
    export interface Test {
        [index: TypeNotFound]: any;
         ~~~~~
!!! error TS1268: An index signature parameter type must be 'string', 'number', 'symbol', or a template literal type.
                ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeNotFound'.
    }
    